# project-template

./: .flake8  .pre-commit-config.yaml  Makefile  README.rst  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
project_template/: __init__.py  console.py
src/project_template/: console.py
tests/: __init__.py  conftest.py  test_console.py
