[tool.poetry]
name = "project-template"
version = "0.1.0"
description = "A cookiecutter template implementing as many best practices as possible"
license = "GPL-3-or-later"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>"]
homepage = "https://github.com/rbpatt2019/project-template"
repository = "https://github.com/rbpatt2019/project-template"
keywords = ["cookiecutter"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
coverage = "^5.3.1"
pytest = "^6.2.1"
pytest-clarity = "^0.3.0-alpha.0"
pytest-sugar = "^0.9.4"
pytest-mock = "^3.4.0"
pytest-cov = "^2.10.1"
six = "^1.15.0"
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.6.4"
bandit = "^1.7.0"
safety = "^1.10.0"

[tool.coverage.run]
branch = true
source = ["project_template"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
addopts = """
-vv
--ignore=docs
--diff-type=split
"""

[tool.pylint.messages_control]
disable = "C"

[tool.pylint.similarities]
min-similarity-lines = 5
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
