[tool.poetry]
name = "project-template"
version = "0.1.0"
description = "A cookiecutter template implementing as many best practices as possible"
license = "GPL-3-or-later"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>"]
homepage = "https://github.com/rbpatt2019/project-template"
repository = "https://github.com/rbpatt2019/project-template"
keywords = ["cookiecutter"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
coverage = "^5"
pytest = "^6"
pytest-clarity = "^0.3.0-alpha.0"
pytest-sugar = "^0"
pytest-mock = "^3"
pytest-cov = "^2"
six = "^1.15.0" # Reguired for pytest clarity
black = "^20.8b1"
isort = "^5"
safety = "^1"
typeguard = "^2"
flake8-bugbear = "^20"
flake8-bandit = "^2"
flake8-annotations = "^2"
flake8-pytest-style = "^1"
flake8-docstrings = "^1"
darglint = "^1"
xdoctest = "^0"
Sphinx = "^3"
sphinx-rtd-theme = "^0"
nox = "^2020.12.31"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"

[tool.coverage.run]
branch = true
source = ["project_template"]

[tool.coverage.report]
show_missing = true
fail_under = 100

# flake8 does not support pyproject.toml
# See .flake8 for configuration

[tool.pytest.ini_options]
addopts = """
-vv
--ignore=docs
--diff-type=split
--typeguard-packages=project_template
"""

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
